--- a/scss/standalone.scss
+++ b/scss/standalone.scss
@@ -11,5 +11,6 @@
 @include meta.load-css('components/buttons');
 @include meta.load-css('components/forms');
 @include meta.load-css('utilities/spacing');
+@include meta.load-css('utilities/width');
 @include meta.load-css('utilities/text');
 @include meta.load-css('utilities/radius');
