--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,6 +1,7 @@
+@use 'config' as c;
 @use 'functions' as f;
 
-// --- 1. Farben ---
+// --- Farben ---
 $colors: (
   'primary': #3498db,
   'secondary': #2ecc71,
@@ -12,25 +13,23 @@ $colors: (
   'muted': #e5e7eb,
 );
 
-// --- 2. Typografie (Modular Scale) ---
+// --- Typografie (Modular Scale) ---
 $root-font-size: 100%;
-$type-base-min: 16px;
-$type-base-max: 18px;
 $type-scale-min: 1.2; // Mobile Ratio (Minor Third)
 $type-scale-max: 1.333; // Desktop Ratio (Perfect Fourth)
 
 // Generierte Map
 $font-size-map: (
-  'xs': (f.modular-scale($type-base-min, $type-scale-min, -2), f.modular-scale($type-base-max, $type-scale-max, -2)),
-  's': (f.modular-scale($type-base-min, $type-scale-min, -1), f.modular-scale($type-base-max, $type-scale-max, -1)),
-  'm': (f.modular-scale($type-base-min, $type-scale-min, 0), f.modular-scale($type-base-max, $type-scale-max, 0)),
-  'l': (f.modular-scale($type-base-min, $type-scale-min, 1), f.modular-scale($type-base-max, $type-scale-max, 1)),
-  'xl': (f.modular-scale($type-base-min, $type-scale-min, 2), f.modular-scale($type-base-max, $type-scale-max, 2)),
-  'xxl': (f.modular-scale($type-base-min, $type-scale-min, 3), f.modular-scale($type-base-max, $type-scale-max, 3)),
-  '3xl': (f.modular-scale($type-base-min, $type-scale-min, 4), f.modular-scale($type-base-max, $type-scale-max, 4))
+  'xs': (f.modular-scale(c.$type-base-min, $type-scale-min, -2), f.modular-scale(c.$type-base-max, $type-scale-max, -2)),
+  's': (f.modular-scale(c.$type-base-min, $type-scale-min, -1), f.modular-scale(c.$type-base-max, $type-scale-max, -1)),
+  'm': (f.modular-scale(c.$type-base-min, $type-scale-min, 0), f.modular-scale(c.$type-base-max, $type-scale-max, 0)),
+  'l': (f.modular-scale(c.$type-base-min, $type-scale-min, 1), f.modular-scale(c.$type-base-max, $type-scale-max, 1)),
+  'xl': (f.modular-scale(c.$type-base-min, $type-scale-min, 2), f.modular-scale(c.$type-base-max, $type-scale-max, 2)),
+  'xxl': (f.modular-scale(c.$type-base-min, $type-scale-min, 3), f.modular-scale(c.$type-base-max, $type-scale-max, 3)),
+  '3xl': (f.modular-scale(c.$type-base-min, $type-scale-min, 4), f.modular-scale(c.$type-base-max, $type-scale-max, 4))
 );
 
-// --- 3. Spacing (Lineare Skala) ---
+// --- Spacing (Lineare Skala) ---
 $space-unit: 8px; // Basis
 $space-map: (
   'none': 0,
@@ -43,13 +42,13 @@ $space-map: (
   'huge': $space-unit * 16
 );
 
-// --- 4. Layout ---
-$container-max-width: 1280px; // Standard Breite der Website
+// --- Layout ---
+$container-max-width: 1366px; // Standard Breite der Website
 $grid-columns: 12; // Standard Spaltenanzahl
 $gap-x: clamp(1.5rem, 4vw + 1rem, 4rem); // Seitlicher Abstand (Padding Inline)
 $gap-y: clamp(3rem, 10vw, 8rem); // Vertikaler Abstand zwischen Sektionen (Padding Block)
 
-// --- 5. Radius --- 
+// --- Radius --- 
 $radius-unit: 4px; // Basis
 $radius-map: (
   'none': 0,
@@ -60,4 +59,23 @@ $radius-map: (
   'xl': $radius-unit * 4,
   'xxl': $radius-unit * 8,
   'circle': 500vh,
+);
+
+// --- Width ---
+$width-map: (
+  'xs': 0.1,
+  's': 0.2,
+  'm': 0.4,
+  'l': 0.6,
+  'xl': 0.8,
+  'xxl': 0.9,
+  'full': 1
+);
+
+$breakout-map: (
+  's': 0.6,
+  'm': 0.7,
+  'l': 0.8,
+  'xl': 0.9,
+  'full': 1
 );
